--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -20,6 +20,19 @@
   line-height: 140%;
 }
 
+.watch__title {
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-style: normal;
+}
+
+.watch__btn {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -42,6 +55,14 @@ ol, ul, li {
 
 a {
   text-decoration: none;
+}
+
+button {
+  padding: 0;
+  border: none;
+  margin: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .container {
@@ -94,10 +115,65 @@ a {
 }
 
 .watch {
-  background: url(/assets/images/pandaBack.jpg) no-repeat;
+  background-position-y: -80px;
+  background-repeat: no-repeat;
+  background-image: url(../../../assets/images/pandaBack.jpg);
   background-size: cover;
-  width: 100%;
-  height: 100%;
+  height: 780px;
+}
+
+.watch__inner {
+  display: flex;
+  align-items: flex-end;
+  justify-content: end;
+  flex-direction: column;
+}
+
+.watch__box {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.watch__box::before {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  width: 465px;
+  height: 465px;
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  left: calc(50% - 232.5px + 242.5px);
+  top: 90px;
+  z-index: 1;
+}
+
+.watch__title {
+  font-weight: 700;
+  font-size: 106.496px;
+  line-height: 75%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  margin-top: 86px;
+  margin-bottom: 60px;
+}
+.watch__title .watch__title--orange {
+  color: #FFEE2E;
+}
+
+.btn {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  border-radius: 25px;
+  width: 298px;
+  height: 54px;
+}
+
+.watch__btn {
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  margin-right: 99px;
 }
 
 /*# sourceMappingURL=style.css.map */
