--- a/online-zoo/pages/main/sass/_style.scss
+++ b/online-zoo/pages/main/sass/_style.scss
@@ -1,5 +1,6 @@
 $black: #000;
 $white: #fff;
+$yellow: #FFEE2E;
 
 %displayFlexCenterCeter {
     display: flex;
@@ -21,4 +22,17 @@ $white: #fff;
     font-weight: 500;
     font-size: 16px;
     line-height: 140%;
+}
+
+%fontFamilyRoboto {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-style: normal;
+}
+
+%font_style_button {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
 }
