--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -12,15 +12,15 @@
   line-height: 120%;
 }
 
-.backstage__text, .designed .designed__text, .navigation__link {
+.slide__container .slide__title, .backstage__text, .designed .designed__text, .navigation__link {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 140%;
+  line-height: 22px;
 }
 
-.watch__title {
+.slide__container .subtitle, .watch__title {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
 }
@@ -80,6 +80,7 @@ button {
 }
 
 .header {
+  position: relative;
   background-color: #000;
 }
 
@@ -123,12 +124,12 @@ button {
 }
 
 .watch {
-  background-position-y: -80px;
+  margin-top: -80px;
   background-repeat: no-repeat;
   background-image: url(../../../assets/images/pandaBack.jpg);
   background-size: cover;
   height: 780px;
-  margin-bottom: 60px;
+  margin-bottom: 140px;
 }
 
 .watch__inner {
@@ -136,6 +137,7 @@ button {
   align-items: flex-end;
   justify-content: end;
   flex-direction: column;
+  margin-top: 80px;
 }
 
 .watch__box {
@@ -187,6 +189,7 @@ button {
 
 .backstage {
   position: relative;
+  margin-bottom: 106px;
 }
 
 .backstage__wrap {
@@ -219,6 +222,87 @@ h3.backstage__title {
   position: absolute;
   top: -128px;
   right: 0;
+}
+
+.slider {
+  position: relative;
+}
+
+.slider__inner {
+  max-width: 1324px;
+  margin: 0 auto;
+}
+
+.slider__wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.slide__container {
+  max-width: 1160px;
+  padding: 0;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 366px);
+  row-gap: 20px;
+  column-gap: 30px;
+}
+.slide__container .slide {
+  border-radius: 5px;
+  border: 1px solid;
+  border-color: #FA6F32 #FE9013 #FE9013 #FA6F32;
+}
+.slide__container .slide__box-img {
+  width: 100%;
+  border-radius: 5px 5px 0 0;
+  margin-bottom: 8px;
+}
+.slide__container .slide__content {
+  margin-left: 16px;
+  position: relative;
+}
+.slide__container .slide__title {
+  text-transform: uppercase;
+  color: #000;
+  font-weight: 600;
+}
+.slide__container .subtitle {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 120%;
+  margin-bottom: 14px;
+}
+
+.slider__pagination {
+  width: 62px;
+  height: 62px;
+  border-radius: 50%;
+}
+
+.btn__wrap {
+  margin-top: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+}
+
+.slider__wrap-flower {
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+}
+
+.slider__wrap-flower--right {
+  right: 0;
+  left: initial;
+}
+
+.pick {
+  background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+  opacity: 0.9;
 }
 
 /*# sourceMappingURL=style.css.map */
