--- a/online-zoo/pages/main/sass/main.scss
+++ b/online-zoo/pages/main/sass/main.scss
@@ -271,6 +271,14 @@ h3.backstage__title {
     align-items: center;
     justify-content: center;
     margin-bottom: 100px;
+
+    .slider__btn {
+        background: #FE9013;
+        text-align: center;
+        text-transform: uppercase;
+        @extend %fontLink;
+        color: $white;
+    }
 }
 
 .slider__wrap-flower{
@@ -287,4 +295,109 @@ h3.backstage__title {
 .pick {
     background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
     opacity: 0.9;
+}
+
+.pick__inner{
+    background: rgba(253, 253, 255, 0.52);
+    backdrop-filter: blur(2px);
+    border-radius: 20px;
+   // @extend %displayFlexCenterCeter;
+    //justify-content: flex-start;
+   // flex-direction: column;
+
+    .pick__title {
+        color: $orange13;
+        text-align: center;
+        padding: 41px 0 30px 0;
+        @extend %font_title;
+    }
+
+    .pick__subtitle {
+        color: $gray_blue;
+        @extend %font_title;
+        font-size: 24px;
+        padding-bottom: 40px;
+        margin-left: 99px;
+    }
+
+    .pick__text {
+        color: $gray_blue;
+        @extend %fontFamilyRoboto;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 130%;
+        row-gap: 10px;
+        margin-left: 99px;
+    }
+
+    .pick__text + .pick__text {
+        margin-top: 10px;
+    }
+
+    .pick__text.pick__text--weight {
+        margin-bottom: 60px;
+    }
+
+    .pick__text--weight {
+        font-weight: 400;
+    }
+}
+   
+.works__title {
+    text-align: center;
+    margin-bottom: 40px;
+    @extend %fontFamilyRoboto;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 130%;
+    color: $gray_blue;
+}
+
+.works__wrap {
+    max-width: 764px;
+    margin: 0 auto;
+    /* display: grid;
+    grid-template-columns: 168px 69px 168px 69px 168px;
+    grid-template-rows: 244px;
+    column-gap: 30.5px;
+    align-items: center;
+    justify-content: center;
+    justify-items: center; */  
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    column-gap: 30.5px;
+} 
+
+.works__box {
+    margin-bottom: 60px;
+}
+
+.works__contrainer {
+    text-align: center;
+    width: 168px;
+    height: 168px;
+    background-color: $white;
+    @extend %displayFlexCenterCeter;
+    border-radius: 5px;
+    border: 1px solid;
+    border-color:  #FA6F32 $orange13 $orange13 #FA6F32;
+    margin-bottom: 30px;
+}
+
+.works__box-title {
+    @extend %fontLink;
+    font-weight: 400;
+    color: $gray_blue;
+}
+
+.pick__btn-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pick__btn {
+    margin-bottom: 59px;
 }
