--- a/online-zoo/pages/main/sass/_style.scss
+++ b/online-zoo/pages/main/sass/_style.scss
@@ -3,6 +3,11 @@ $white: #fff;
 $yellow: #FFEE2E;
 $gray_blue: #333B41;
 $orange13: #FE9013;
+$gray_light: #F1F3F2;
+$gray_4: #BDBDBD;
+$line_scroll: #F5F7F6;
+$black_footer: #111115;
+$green: #4B9200;
 
 $headerHeigth: -80px;
 
@@ -48,4 +53,13 @@ $headerHeigth: -80px;
     font-size: 48px;
     line-height: 120%;
 }
+
+%smallParagraph {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 18px;
+}
+
 
