--- a/online-zoo/pages/main/sass/main.scss
+++ b/online-zoo/pages/main/sass/main.scss
@@ -401,3 +401,241 @@ h3.backstage__title {
 .pick__btn {
     margin-bottom: 59px;
 }
+
+.testimonials {
+    padding-top: 140px;
+}
+
+.testimonials__inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .testimonials__title {
+        @extend %font_title;
+        font-size: 36px;
+        line-height: 47px;
+    }
+
+    h2.testimonials__title {
+        margin-bottom: 47px; 
+    }
+
+    .testimonials__wrap {
+       @extend %displayFlexCenterCeter;
+        flex-direction: row;
+        gap: 30.3px;
+        margin-bottom: 21px;
+    }
+
+    .testimonials__box {
+        border: 2px solid;
+        padding: 15px 15px 19px 16px;
+        border-radius: 20px;
+        background: $gray_light;
+         max-width: 268px;
+        //height: 391px; 
+    }
+
+    .testimonials__container-title {
+        margin-left: 10px;
+    }
+
+    .testimonials__box-row:first-child {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: row;
+    }
+
+    h6.testimonials__title {
+        @extend %font_style_button;
+        font-weight: 400;
+    }
+
+    .testimonials__subtitle {
+        @extend %smallParagraph;
+        color: $gray_4;
+    }
+
+    .testimonials__subtitle--where {
+        /* margin-left: 11px; */
+        &::before {
+            content: '•';
+            display: inline-block;
+            margin-right: 5px;
+            margin-left: 6px;
+        }
+    
+    .testimonials__content {
+        @extend %smallParagraph;
+    }     
+    }
+}
+
+.testimonials__scroollbar {
+    @extend %displayFlexCenterCeter;
+    justify-content: flex-start;
+    width: 599px;
+    height: 8px;
+    text-align: center;
+    background: $line_scroll;
+    border-radius: 5px;
+    border: 1px solid transparent; /*Обводка нужной толщины, но прозрачная*/
+   // background: linear-gradient(0deg, #5E17EB 0.08%, #E5097F 155.74%); /*Нужный градиент в качестве фона*/
+    box-shadow: inset 0px 0px 0px 100vw #fff; /*Тень направленная внутрь контейнера, перекрывает ненужный фон и оставляет только рамку*/
+    border-radius: 60px; /*Скругляет углы*/
+    background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%),
+    linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%),
+    linear-gradient(0deg, #F5F7F6, #F5F7F6);
+    margin-bottom: 31px;
+}
+
+.testimonials__scroollbar-slider {
+    background: $orange13;
+    border-radius: 5px; 
+    width: 115.19px;
+    height: 6px;
+    display: block;
+    margin: 1px 0;
+}
+
+.testimonials__btn {
+    border-radius: 5px;
+    @extend %font_style_button;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 183px;
+}
+
+.footer {
+    background: $black_footer;  
+    padding-top: 40px;
+    padding-bottom: 50px;
+}
+
+.footer__inner {
+    display: grid;
+    //grid-template-columns: 298px 101px 362px 32px 367px;
+    grid-template-columns: 399px 394px 367px;
+    grid-template-rows: auto;
+}
+
+.footer__box:nth-child(1) {
+    grid-column: 1 / 2;
+    justify-items: flex-start;
+    /* margin-right: 101px; */
+
+    .logo {
+        margin-bottom: 68px;
+        justify-content: flex-start;
+    }
+
+    .footer__btn {
+        @extend %font_style_button;
+        margin-bottom: 44px;
+        border-radius: 5px;
+        text-align: center;
+        text-transform: uppercase;
+        color: $white;
+    }
+
+    .footer__item-contact + .footer__item-contact {
+        margin-top: 10px;
+    }
+
+    .footer__item-contact {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+
+        i {
+            color: $white;
+            background: rgba(196, 196, 196, 0.5);
+            width: 26px;
+            height: 26px;
+            border-radius: 50%;
+            @extend %displayFlexCenterCeter;
+            margin-right: 12px;
+        }
+    }
+
+    .footer__contact-link {
+        @extend %fontFamilyRoboto;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 140%;
+        color: #fff;
+    }
+}
+
+.footer__box:nth-child(2) {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+
+    .navigation__link {
+        font-weight: 400;
+    }
+}
+
+.footer__box:nth-child(3) {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
+
+    .footer__title {
+        @extend %font_title;
+        font-size: 24px;
+        color: $white;
+        margin-bottom: 14px;
+    }
+
+    .footer__enter {
+        display: flex;
+        flex-direction: row;
+        //background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);;
+
+        .footer__input {
+            margin-right: 10px;
+            max-width: 228px;
+            height: 42px;
+            padding: 10px 7px 10px 10px;
+            @extend %font_style_button;
+            font-weight: 400;
+            background-color: $black_footer;
+            border: 0.7px solid;    
+            border-radius: 2px;
+            //border-image-source: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+            &:focus {
+                outline: none;
+            }
+           
+        }
+
+        .footer__enter-btn {
+            width: 129px;
+            height: 42px;
+            background: $gray_light;
+            border: 1px solid $green;
+            border-radius: 5px;
+            @extend %font_style_button;
+            font-weight: 400;
+            color: $green;
+        }
+
+        
+    }
+
+    
+}
+
+ 
+        
+
+
+
+
