--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -1,4 +1,5 @@
-.works__contrainer, .navigation__list, .logo {
+@charset "UTF-8";
+.footer__box:nth-child(1) .footer__item-contact i, .testimonials__scroollbar, .testimonials__inner .testimonials__wrap, .works__contrainer, .navigation__list, .logo {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,12 +21,12 @@
   line-height: 22px;
 }
 
-.works__title, .pick__inner .pick__text, .slide__container .subtitle, .watch__title {
+.footer__box:nth-child(1) .footer__contact-link, .works__title, .pick__inner .pick__text, .slide__container .subtitle, .watch__title {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
 }
 
-.watch__btn {
+.footer__box:nth-child(3) .footer__enter .footer__enter-btn, .footer__box:nth-child(3) .footer__enter .footer__input, .footer__box:nth-child(1) .footer__btn, .testimonials__btn, .testimonials__inner h6.testimonials__title, .watch__btn {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -33,12 +34,20 @@
   line-height: 22px;
 }
 
-.pick__inner .pick__subtitle, .pick__inner .pick__title, .backstage__title {
+.footer__box:nth-child(3) .footer__title, .testimonials__inner .testimonials__title, .pick__inner .pick__subtitle, .pick__inner .pick__title, .backstage__title {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 48px;
   line-height: 120%;
+}
+
+.testimonials__inner .testimonials__subtitle--where .testimonials__content, .testimonials__inner .testimonials__subtitle {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 18px;
 }
 
 html {
@@ -399,6 +408,188 @@ h3.backstage__title {
 
 .pick__btn {
   margin-bottom: 59px;
+}
+
+.testimonials {
+  padding-top: 140px;
+}
+
+.testimonials__inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.testimonials__inner .testimonials__title {
+  font-size: 36px;
+  line-height: 47px;
+}
+.testimonials__inner h2.testimonials__title {
+  margin-bottom: 47px;
+}
+.testimonials__inner .testimonials__wrap {
+  flex-direction: row;
+  gap: 30.3px;
+  margin-bottom: 21px;
+}
+.testimonials__inner .testimonials__box {
+  border: 2px solid;
+  padding: 15px 15px 19px 16px;
+  border-radius: 20px;
+  background: #F1F3F2;
+  max-width: 268px;
+}
+.testimonials__inner .testimonials__container-title {
+  margin-left: 10px;
+}
+.testimonials__inner .testimonials__box-row:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+.testimonials__inner h6.testimonials__title {
+  font-weight: 400;
+}
+.testimonials__inner .testimonials__subtitle {
+  color: #BDBDBD;
+}
+.testimonials__inner .testimonials__subtitle--where {
+  /* margin-left: 11px; */
+}
+.testimonials__inner .testimonials__subtitle--where::before {
+  content: "•";
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 6px;
+}
+.testimonials__scroollbar {
+  justify-content: flex-start;
+  width: 599px;
+  height: 8px;
+  text-align: center;
+  background: #F5F7F6;
+  border-radius: 5px;
+  border: 1px solid transparent; /*Обводка нужной толщины, но прозрачная*/
+  box-shadow: inset 0px 0px 0px 100vw #fff; /*Тень направленная внутрь контейнера, перекрывает ненужный фон и оставляет только рамку*/
+  border-radius: 60px; /*Скругляет углы*/
+  background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(0deg, #F5F7F6, #F5F7F6);
+  margin-bottom: 31px;
+}
+
+.testimonials__scroollbar-slider {
+  background: #FE9013;
+  border-radius: 5px;
+  width: 115.19px;
+  height: 6px;
+  display: block;
+  margin: 1px 0;
+}
+
+.testimonials__btn {
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 183px;
+}
+
+.footer {
+  background: #111115;
+  padding-top: 40px;
+  padding-bottom: 50px;
+}
+
+.footer__inner {
+  display: grid;
+  grid-template-columns: 399px 394px 367px;
+  grid-template-rows: auto;
+}
+
+.footer__box:nth-child(1) {
+  grid-column: 1/2;
+  justify-items: flex-start;
+  /* margin-right: 101px; */
+}
+.footer__box:nth-child(1) .logo {
+  margin-bottom: 68px;
+  justify-content: flex-start;
+}
+.footer__box:nth-child(1) .footer__btn {
+  margin-bottom: 44px;
+  border-radius: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+}
+.footer__box:nth-child(1) .footer__item-contact + .footer__item-contact {
+  margin-top: 10px;
+}
+.footer__box:nth-child(1) .footer__item-contact {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+.footer__box:nth-child(1) .footer__item-contact i {
+  color: #fff;
+  background: rgba(196, 196, 196, 0.5);
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+.footer__box:nth-child(1) .footer__contact-link {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #fff;
+}
+
+.footer__box:nth-child(2) {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+.footer__box:nth-child(2) .navigation__link {
+  font-weight: 400;
+}
+
+.footer__box:nth-child(3) {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.footer__box:nth-child(3) .footer__title {
+  font-size: 24px;
+  color: #fff;
+  margin-bottom: 14px;
+}
+.footer__box:nth-child(3) .footer__enter {
+  display: flex;
+  flex-direction: row;
+}
+.footer__box:nth-child(3) .footer__enter .footer__input {
+  margin-right: 10px;
+  max-width: 228px;
+  height: 42px;
+  padding: 10px 7px 10px 10px;
+  font-weight: 400;
+  background-color: #111115;
+  border: 0.7px solid;
+  border-radius: 2px;
+}
+.footer__box:nth-child(3) .footer__enter .footer__input:focus {
+  outline: none;
+}
+.footer__box:nth-child(3) .footer__enter .footer__enter-btn {
+  width: 129px;
+  height: 42px;
+  background: #F1F3F2;
+  border: 1px solid #4B9200;
+  border-radius: 5px;
+  font-weight: 400;
+  color: #4B9200;
 }
 
 /*# sourceMappingURL=style.css.map */
