--- a/online-zoo/pages/main/sass/style.css
+++ b/online-zoo/pages/main/sass/style.css
@@ -21,7 +21,7 @@
   line-height: 22px;
 }
 
-.footer__box:nth-child(1) .footer__contact-link, .works__title, .pick__inner .pick__text, .slide__container .subtitle, .watch__title {
+.footer__box:nth-child(3) .footer__dev-link .footer__text-avtor, .footer__box:nth-child(1) .footer__contact-link, .works__title, .pick__inner .pick__text, .slide__container .subtitle, .watch__title {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   font-style: normal;
 }
@@ -306,7 +306,7 @@ h3.backstage__title {
 
 .slider__wrap-flower {
   position: absolute;
-  bottom: -100px;
+  bottom: -105px;
   left: 0;
 }
 
@@ -318,6 +318,7 @@ h3.backstage__title {
 .pick {
   background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   opacity: 0.9;
+  padding: 69px 0 100px;
 }
 
 .pick__inner {
@@ -411,7 +412,14 @@ h3.backstage__title {
 }
 
 .testimonials {
-  padding-top: 140px;
+  padding-top: 137px;
+  position: relative;
+}
+.testimonials .leav__container {
+  position: absolute;
+  right: 0;
+  bottom: -135px;
+  max-width: 100%;
 }
 
 .testimonials__inner {
@@ -498,6 +506,7 @@ h3.backstage__title {
   background: #111115;
   padding-top: 40px;
   padding-bottom: 50px;
+  position: relative;
 }
 
 .footer__inner {
@@ -555,10 +564,10 @@ h3.backstage__title {
 }
 
 .footer__box:nth-child(3) {
-  display: flex;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px 100px;
+  row-gap: 216px;
 }
 .footer__box:nth-child(3) .footer__title {
   font-size: 24px;
@@ -590,6 +599,20 @@ h3.backstage__title {
   border-radius: 5px;
   font-weight: 400;
   color: #4B9200;
+}
+.footer__box:nth-child(3) .footer__dev-link {
+  align-self: end;
+  justify-self: end;
+}
+.footer__box:nth-child(3) .footer__dev-link .footer__text-avtor {
+  font-weight: 100;
+  font-size: 16px;
+  line-height: 21px;
+  color: #fff;
+  opacity: 0.3;
+}
+.footer__box:nth-child(3) .footer__dev-link .footer__text-avtor + .footer__text-avtor {
+  margin-top: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
