--- a/online-zoo/pages/main/sass/_style.scss
+++ b/online-zoo/pages/main/sass/_style.scss
@@ -8,8 +8,13 @@ $gray_4: #BDBDBD;
 $line_scroll: #F5F7F6;
 $black_footer: #111115;
 $green: #4B9200;
+$hover_orange: #E47209;
 
 $headerHeigth: -80px;
+
+@mixin navigation__link--activ {
+    @include navigation__link--activ;
+}
 
 %displayFlexCenterCeter {
     display: flex;
