--- a/online-zoo/pages/main/sass/main.scss
+++ b/online-zoo/pages/main/sass/main.scss
@@ -282,7 +282,22 @@ h3.backstage__title {
     .slide{
         border-radius: 5px;
         border: 1px solid;
-        border-color:  #FA6F32 #FE9013 #FE9013 #FA6F32;
+
+        position: relative;
+        background: #fff;
+        background-clip: padding-box; /* !importanté */
+        border: solid 1px transparent; /* !importanté */
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0; right: 0; bottom: 0; left: 0;
+            z-index: -1;
+            margin: -1.3px; /* !importanté */
+            border-radius: inherit; /* !importanté */
+            background: linear-gradient(113.96deg, #FA6F32 1.49%, #FE9013 101.44%);
+        }
+
     }
 
     .slide__box {
@@ -503,9 +518,24 @@ h3.backstage__title {
     background-color: $white;
     @extend %displayFlexCenterCeter;
     border-radius: 5px;
-    border: 1px solid;
+    border: 1px solid transparent;
     border-color:  #FA6F32 $orange13 $orange13 #FA6F32;
     margin-bottom: 30px;
+
+
+    position: relative;
+    background-clip: padding-box; /* !importanté */
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0; right: 0; bottom: 0; left: 0;
+        z-index: -1;
+        margin: -1px; /* !importanté */
+        border-radius: inherit; /* !importanté */
+        background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    }
+
 }
 
 .works__box-title {
@@ -574,12 +604,28 @@ h3.backstage__title {
     }
 
     .testimonials__box {
-        border: 2px solid;
+        border: 2px solid transparent;
         padding: 15px 15px 19px 16px;
         border-radius: 20px;
         background: $gray_light;
-         max-width: 268px;
+        max-width: 268px;
+        position: relative;
         //height: 391px; 
+        background-clip: padding-box;
+
+        &::before {
+            content: '';
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: -2px; /* !importanté */
+            border-radius: inherit;
+            background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%),
+            linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
+        }
     }
 
     .testimonials__container-title {
@@ -626,14 +672,26 @@ h3.backstage__title {
     text-align: center;
     background: $line_scroll;
     border-radius: 5px;
-    border: 1px solid transparent; /*Обводка нужной толщины, но прозрачная*/
-   // background: linear-gradient(0deg, #5E17EB 0.08%, #E5097F 155.74%); /*Нужный градиент в качестве фона*/
-    box-shadow: inset 0px 0px 0px 100vw #fff; /*Тень направленная внутрь контейнера, перекрывает ненужный фон и оставляет только рамку*/
-    border-radius: 60px; /*Скругляет углы*/
-    background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%),
+    border: 1px solid transparent; 
+    border-radius: 60px; 
+    margin-bottom: 31px;
+    background-clip: padding-box;
+    position: relative;
+
+        &::before {
+            content: '';
+            z-index: -1;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: -1px; /* !importanté */
+            border-radius: inherit;
+            background: linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%),
     linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%),
     linear-gradient(0deg, #F5F7F6, #F5F7F6);
-    margin-bottom: 31px;
+        }
 }
 
 .testimonials__scroollbar-slider {
@@ -776,19 +834,42 @@ h3.backstage__title {
         display: flex;
         flex-direction: row;
 
-        .footer__input {
+        label {
+            border: 0.7px solid transparent;  
+            border-radius: 2px;
+            position: relative;
+            z-index: 2;
+            background-clip: padding-box;
             margin-right: 10px;
-            max-width: 228px;
+        }
+        label::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: -1;
+            border-radius: inherit;
+            background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+            margin: -0.7px;
+        }
+
+        .footer__input {
+            width: 228px;
             height: 42px;
             padding: 10px 7px 10px 10px;
             @extend %font_style_button;
             font-weight: 400;
             background-color: $black_footer;
-            border: 0.7px solid;    
+            border: 0.7px solid transparent;  
+            background-clip: padding-box;  
             border-radius: 2px;
+            color: $gray_4;
             &:focus {
                 outline: none;
             }
+            position: relative;
         }
 
         .footer__enter-btn {
@@ -823,9 +904,6 @@ h3.backstage__title {
     
 }
 
-
-
-        
 
 
 
