feat: style and html pages/donate

--- a/online-zoo/pages/main/sass/_style.scss
+++ b/online-zoo/pages/main/sass/_style.scss
@@ -72,4 +72,12 @@ $headerHeigth: -80px;
     line-height: 18px;
 }
 
+%font__h3 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 47px;
+}
+
 
